<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NowPlaying">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  >

<ImageView
    android:contentDescription="@string/content_description3"
    android:id="@+id/image_view1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:src="@drawable/background2"
    android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/image_view1"
        android:layout_marginTop="10dp"
        android:textSize="35sp"
        />
    <LinearLayout
        android:layout_below="@id/text_view"
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
    <TextView
        android:id="@+id/text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_name"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_name"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        />
    </LinearLayout>
    <SeekBar
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
</ScrollView>